- Fixed bug #51991 (spl_autoload and *nix support with namespace)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@300176 c90b9560-bf6c-de11-be94-00142212c4b1